--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
         {
             "src": "article_api.py",
-            "use": "@vercel/python",
+            "use": "@vercel/python"
         }
     ],
     "routes": [
