--- a/articles/.env
+++ b/articles/.env
@@ -1,3 +1,4 @@
-REACT_APP_API_URL=https://news-consolidater-a6b192023f70.herokuapp.com/api
+# REACT_APP_API_URL=https://news-consolidater-a6b192023f70.herokuapp.com/api
+REACT_APP_API_URL=http://127.0.0.1:3000/api
 REACT_APP_SITE_KEY=6LeHQCwoAAAAACFc3sCL4hTvAf7IvK7XLESHMJTt
 # REACT_APP_SITE_KEY=6LeeMiwoAAAAABCL9fw6VJkf9no3t8NFbLPJWPqj
