--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "article_api.py",
+            "src": "api/article_api.py/",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "article_api.py"
+            "dest": "api/article_api.py/"
         }
     ]
 }
