--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /tmp/
 /__pycache__/
 /.venv/
+venv
 
 # Used by dotenv library to load environment variables.
 # .env
@@ -58,3 +59,5 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+.vercel
+.env*.local
